Sugati/src/objects/Client_Group__c.object
<CustomObject>
    <fields>
        <fullName>CG_Arrival_Presents__c</fullName>
        <label>Arrival Presents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Charity__c</fullName>
        <label>Charity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Deposit_Overwrite__c</fullName>
        <label>Deposit Overwrite</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Deposit_Required_II__c</fullName>
        <label>Deposit Required II</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Deposit_Required_I__c</fullName>
        <label>Deposit Required I</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Display_Price__c</fullName>
        <label>Display Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CG_Exchange_Rate_GBP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Rate GBP</label>
        <referenceTo>Exchange_Rate__c</referenceTo>
        <relationshipLabel>Client Groups</relationshipLabel>
        <relationshipName>Client_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CG_FX_Transfer_Charges__c</fullName>
        <label>FX Transfer Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Lead_Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Group Member</label>
        <referenceTo>Group_Member__c</referenceTo>
        <relationshipLabel>Client Groups</relationshipLabel>
        <relationshipName>Client_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CG_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Client Groups</relationshipLabel>
        <relationshipName>Client_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CG_Order__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Order</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CG_PDF_Quotation__c</fullName>
        <label>PDF Quotation Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CG_Recommended_Selling_Price_Rp__c</fullName>
        <label>Total Recommended Selling Price MarkedUp</label>
        <summarizedField>Supplier_Cost__c.SC_MarkUp_Cost_for_Selling_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Client_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CG_Recommended_Selling_Price_Today__c</fullName>
        <label>Recommended Selling Price Today</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Recommended_Selling_Price__c</fullName>
        <label>Recommended Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Regulatory_Charges__c</fullName>
        <label>Regulatory Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Selling_Price__c</fullName>
        <label>Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_Adult_Members__c</fullName>
        <label>Total Adult Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_Child_Members__c</fullName>
        <label>Total Child Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_Flight_Cost__c</fullName>
        <label>Total Flight Cost</label>
        <summarizedField>Supplier_Cost__c.SC_MarkUp_Cost_for_Selling_Price__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Is_Flight_Cost__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Client_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CG_Total_Group_Members__c</fullName>
        <label>Total Group Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_Infant_Members__c</fullName>
        <label>Total Infant Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_Recommended_Selling_Price__c</fullName>
        <label>Total Recommended Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CG_Total_cost_in_selling_currency__c</fullName>
        <label>Total cost in selling currency</label>
        <summarizedField>Supplier_Cost__c.SC_Total_Net_CostSC__c</summarizedField>
        <summaryFilterItems>
            <field>Supplier_Cost__c.SC_Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplier_Cost__c.SC_Client_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cost_Autofill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Autofill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Group_Name_Formula__c</fullName>
        <formula>IF(CG_Lead_Group_Member__r.GM_Contact__r.C_Prefered_Name__c!=null,CG_Lead_Group_Member__r.GM_Contact__r.C_Prefered_Name__c ,CG_Lead_Group_Member__r.GM_Contact__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Group Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Recommended_Selling_Price__c</fullName>
        <label>Previous Recommended Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Selling_Price__c</fullName>
        <description>(CG_Recommended_Selling_Price_Rp__c + (CG_FX_Transfer_Charges__c+ CG_Arrival_Presents__c+ CG_Charity__c + CG_Regulatory_Charges__c ))*(1+ CG_Opportunity__r.O_Target_Mark_Up_Value__c/100 )</description>
        <formula>(CG_Recommended_Selling_Price_Rp__c)+(CG_FX_Transfer_Charges__c+ CG_Arrival_Presents__c+ CG_Charity__c + CG_Regulatory_Charges__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(CG_Recommended_Selling_Price_Rp__c)*(1+ CG_Opportunity__r.O_Target_Mark_Up_Value__c/100 )*(CG_FX_Transfer_Charges__c+ CG_Arrival_Presents__c+ CG_Charity__c + CG_Regulatory_Charges__c )</inlineHelpText>
        <label>Recommended Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Client Group</label>
    <nameField>
        <label>Client Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>